--- a/src/app/auto-complete/auto-complete.component.html
+++ b/src/app/auto-complete/auto-complete.component.html
@@ -1,15 +1,16 @@
 <div class="container" >
-    <h1>Movies</h1>
-    <div *ngFor="let item of selected">
-            <div class="selected" >
-                <span>{{item}}</span>
-                <a (click)="remove(item)">x</a>
-            </div>
+    <div *ngIf="multi === true">
+        <div *ngFor="let item of selected">
+                <div class="selected" >
+                    <span>{{item}}</span>
+                    <a (click)="remove(item)">x</a>
+                </div>
+        </div>
     </div>
-    <div style="float:left;clear:both">
+    <div>
         <div class="input-field col s12">
-            <label for="movies">How many have you seen?</label>
-            <input id="movies" type="text" class="validate filter-input" placeholder="Enter a movie name"
+            <label for="movies">{{label}}</label>
+            <input id="movies" type="text" class="validate filter-input" placeholder={{placeHolder}}
                 [(ngModel)]=query (keyup)=filter($event) (focus)=filter($event)>
         </div>
         
@@ -20,6 +21,5 @@
                 </li>
             </ul>
         </div>
-    </div>
-    
+    </div>   
 </div>  
