--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
         [multi] = false
         [data] = "countries" 
         [placeHolder] = "singlePlaceHolder" 
-        [label] = "singLeLabel">
+        [label] = "singleLabel">
     </app-auto-complete>
 </div>
 
@@ -14,7 +14,7 @@
         [multi] = true
         [data] = "movies" 
         [placeHolder] = "multiPlaceHolder" 
-        [label] = "multiLeLabel">
+        [label] = "multiLabel">
     </app-auto-complete>
 </div>
 
