floating multi selections to the right side

--- a/src/app/auto-complete/auto-complete.component.html
+++ b/src/app/auto-complete/auto-complete.component.html
@@ -1,5 +1,5 @@
 <div class="container" >
-    <div *ngIf="multi === true">
+    <div *ngIf="multi === true" style="float:right;">
         <div *ngFor="let item of selected">
                 <div class="selected" >
                     <span>{{item}}</span>
